# aiStudy

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/app/: main.py
backend/paper_learning_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: spec12d_gate.py
backend/tests/: rag_eval_s0_runner.py  test_alembic_heads.py  test_asset_delete_service.py  test_asset_user_isolation.py  test_auth_bootstrap_service.py  test_auth_dependency.py  test_auth_routes.py  test_auth_service.py  test_chat_user_isolation.py  test_chunk_builder_service.py  test_llm_prompt_compaction.py  test_llm_service.py  test_mindmap_story_graph.py  test_note_user_isolation.py  test_query_rewrite_service.py  test_rag_eval_s0_runner.py  test_reader_user_isolation.py  test_retrieval_hybrid_rrf.py  test_retrieval_service_filters.py  test_runtime_config.py  test_slide_analysis_service.py  test_slide_async_rebuild.py  test_slide_dsl_quality_flow.py  test_slide_generation_v2_service.py  test_slide_html_authoring_service.py  test_slide_lesson_plan_service.py  test_slide_planning_service.py  test_slide_playback_service.py  test_slide_processing_recovery_service.py  test_slide_runtime_snapshot_service.py  test_slide_scene_service.py  test_slide_tts_service.py  test_slide_visual_asset_service.py  test_slides_user_isolation.py  test_spec12d_benchmark_service.py  test_spec15_slides_pipeline.py  test_task_reliability_service.py
(+188 files in other folders)
